[package]
name = "uptime-checker"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.4.1"
hyper-util = "0.1.10"
anyhow = "1.0.66"
clap = { version = "4.4.6", features = ["derive"] }
chrono = { version = "0.4.31", default-features = false, features = [
    "std",
    "serde",
] }
httpmock = "0.7.0-rc.1"
reqwest = { version = "0.12.2", features = ["hickory-dns"] }
openssl = "0.10.72"
rust_arroyo = { version = "*", git = "https://github.com/getsentry/arroyo", rev = "0b84afc07131d8b8d48abcb7c8de8cfa2a98e526" }
tokio = { version = "1.43.1", features = [
    "macros",
    "sync",
    "tracing",
    "signal",
    "rt-multi-thread",
    "test-util",
] }
uuid = { version = "1.8.0", features = ["serde", "v4", "v5"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.93"
figment = { version = "0.10", features = ["yaml", "env", "test"] }
similar-asserts = "1.4.2"
sentry = { version = "0.34.0", features = ["tracing"] }
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-test = "0.2.5"
console = "0.15.8"
sentry-kafka-schemas = "1.1.0"
serde_with = { version = "3.8.1", features = ["chrono"] }
rmp-serde = "1.3.0"
serde_repr = "0.1.19"
tokio-util = "0.7.11"
metrics-exporter-statsd = "0.8.0"
metrics = "0.23.0"
futures = "0.3.30"
tokio-stream = "0.1.15"
redis = { version = "0.30.0", features = ["cluster-async", "tokio-comp"] }
ipnet = "2.11.0"
hickory-resolver = "0.24.1"
tokio-rustls = "0.26.1"
rustls = "0.23.21"
rcgen = "0.11"
time = "0.3"
ctor = "0.2"
hostname = "0.4.0"
tokio-metrics = "0.4.0"
isahc = { git = "https://github.com/getsentry/isahc", rev = "be5d9777b20f664fd13acdaf61ae2212765ff0d8" }
iprange = "0.6.7"
http = "1.2.0"
[patch.crates-io]
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka" }
reqwest = { git = "https://github.com/getsentry/reqwest-uptime", rev = "be34e1e20c88190dfd46dd609f43aeb15e9ede1b" }
# we're using the danf/hickory-dns-nameservers branch on the reqwest-uptime fork

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = "debuginfo"

[dev-dependencies]
redis-test-macro = { path = "./redis-test-macro" }
ntest = "0.9.3"
socket-server-mocker = "0.5.0"
