[package]
name = "uptime-checker"
version = "25.10.0"
# keep edition in sync with .pre-commit-config.yaml
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { git = "https://github.com/getsentry/hyper", rev = "ea400d80174114b12cf5078462e1cdd75d1627a8" }
hyper-util = { git = "https://github.com/getsentry/hyper-util", rev = "335700c7180dc392b674bc93ac8939d44138f2fc" }
reqwest = { git = "https://github.com/getsentry/reqwest-uptime", rev = "4e4b644fc38b62ed2e01060a44344dc660aa8f6d", features = [
  "hickory-dns",
] }
anyhow = "1.0.66"
clap = { version = "4.4.6", features = ["derive"] }
chrono = { version = "0.4.31", default-features = false, features = [
  "std",
  "serde",
] }
openssl = "0.10.72"
rust_arroyo = { version = "*", git = "https://github.com/getsentry/arroyo", rev = "0b84afc07131d8b8d48abcb7c8de8cfa2a98e526" }
tokio = { version = "1.43.1", features = [
  "macros",
  "sync",
  "tracing",
  "signal",
  "rt-multi-thread",
  "test-util",
] }
texting_robots = "0.2.2"
uuid = { version = "1.8.0", features = ["serde", "v4", "v5"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.93"
figment = { version = "0.10", features = ["yaml", "env", "test"] }
similar-asserts = "1.4.2"
sentry = { version = "0.34.0", features = ["tracing"] }
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-test = "0.2.5"
console = "0.15.8"
sentry-kafka-schemas = "2.1.7"
serde_with = { version = "3.8.1", features = ["chrono"] }
rmp-serde = "1.3.0"
serde_repr = "0.1.19"
tokio-util = "0.7.11"
metrics-exporter-statsd = "0.8.0"
metrics = "0.23.0"
futures = "0.3.30"
tokio-stream = "0.1.15"
redis = { version = "0.30.0", features = ["cluster-async", "tokio-comp"] }
ipnet = "2.11.0"
hickory-resolver = "0.24.1"
tokio-rustls = "0.26.1"
rustls = "0.23.21"
rcgen = "0.11"
time = "0.3"
ctor = "0.2"
hostname = "0.4.0"
tokio-metrics = "0.4.0"
iprange = "0.6.7"
http = "1.2.0"
relay-pattern = { git = "https://github.com/getsentry/relay", rev = "7ba03b5f6ffe95c2429ba315f661d2b8ee3c0efe" }

[patch.crates-io]
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka" }
# we're using the danf/hickory-dns-nameservers branch on the reqwest-uptime fork

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = "debuginfo"

[dev-dependencies]
redis-test-macro = { path = "./redis-test-macro" }
ntest = "0.9.3"
socket-server-mocker = "0.5.0"
httpmock = "0.7.0-rc.1"
